Fix wrapping long code lines in UI
Wrapping was initially added in https://github.com/go-gitea/gitea/pull/2789
but it is currently disabled because the rule that applies wrapping to
the wrap class did not have enough CSS specificity.

Resolved the issue by using a general selector that matches all code
boxes. The previous wrap class was removed because it had only been
inconsistenly applied to various code boxes and because I found no easy
way to add classes to code boxes rendered in Markdown.

Also removed a seemingly useless :before on code view and added padding
to restore the spacing.

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -370,12 +370,9 @@
                         padding: 0 !important;
                         li {
                             display: block;
-                            width: 100%;
+                            padding: 0 .25em;
                             &.active {
                                 background: #ffffdd;
-                            }
-                            &:before {
-                                content: ' ';
                             }
                         }
                     }
